; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_stack_argsize.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_stack_argsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch_tdep = type { i32 }

@mips_stack_argsize_string = common dso_local global i64 0, align 8
@size_auto = common dso_local global i64 0, align 8
@size_64 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdbarch_tdep*)* @mips_stack_argsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mips_stack_argsize(%struct.gdbarch_tdep* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gdbarch_tdep*, align 8
  store %struct.gdbarch_tdep* %0, %struct.gdbarch_tdep** %3, align 8
  %4 = load i64, i64* @mips_stack_argsize_string, align 8
  %5 = load i64, i64* @size_auto, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load %struct.gdbarch_tdep*, %struct.gdbarch_tdep** %3, align 8
  %9 = getelementptr inbounds %struct.gdbarch_tdep, %struct.gdbarch_tdep* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i64, i64* @mips_stack_argsize_string, align 8
  %13 = load i64, i64* @size_64, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 8, i32* %2, align 4
  br label %17

16:                                               ; preds = %11
  store i32 4, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %15, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
